# algorithms

./: .gitignore  main.cpp  meson.build
algorithms/: meson.build
algorithms/sortings/: meson.build
algorithms/sortings/include/: insertion_sort.h  meson.build
algorithms/sortings/src/: meson.build
algorithms/sortings/tests/: meson.build  test_sortings.cpp
